@@ -1,3 +1,6 @@
+2005-02-11 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
+   * Testing/TestMAkeIcon.cxx : complete the test
+
 2005-02-10 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
    * Testing/TestWriteSimple.cxx, TestSequence.cxx : fix memroy leaks
 
